base/src/test/resources/failure/cubical/boundary-disagrees.aya.txt
In file $FILE:15:2 ->

  13 |   
  14 |   def counter (A : Type) (u : A) (v : A) (i : I) (j : I) : Partial (~ i ∧ ~ j) A =>
  15 |     {| ~ i := u | ~ i ∧ ~ j := v |}
     |     ^-----------------------------^

Error: The boundary
         v
       disagrees with
         u

1 error(s), 0 warning(s).
What are you doing?
